# spotbot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: spotbot.yml
src/: formatted.rs  main.rs  spotify.rs
