[package]
name = "spotbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
matrix-sdk = { version = "0.6.2", features = ["markdown"] }
regex = "1"
rspotify = { git = "https://github.com/ramsayleung/rspotify", features = ["cli"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }