[package]
name = "spotbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
matrix-sdk = { version = "0.6.2", features = ["markdown"] }
regex = "1"
rspotify = { version = "0.11.6", features = ["cli"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }